--- a/src/index.css
+++ b/src/index.css
@@ -1,68 +1,132 @@
-:root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
+*{
+  padding: 0;
   margin: 0;
+  box-sizing: border-box;
+}
+/* prima parte */
+.set-title{
+  height: 100px;
   display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  align-items: center;
+  background-color: aliceblue;
+  font-family: Arial, Helvetica, sans-serif;
+  justify-content: center;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+.navbar{
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  gap: 3%;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
+.navbar a{
+  text-decoration: none;
+  color: white;
+  font-size: 17px;
+  background-color: cadetblue;
+  padding: 10px 20px;
   cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+
+
+.navbar a:hover {
+  background-color: greenyellow;
+}
+
+.navbar a.active{
+  background-color: red;
+}
+
+
+main{
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  display: flex;
+  justify-content: center;
+}
+
+main form{
+  display: flex; 
+  justify-content: center; 
+  padding-top: 30px;
+  padding-bottom: 20px;
+  flex-direction: column;
+}
+
+main form input{
+  border-radius: 10px;
+  border: solid 2px greenyellow;
+  font-size: 20px;
+  margin-top: 15px;
+  
+}
+
+main form button{
+  padding: 5px 10px;
+  cursor: pointer;
+  background-color:greenyellow;
+  border: none;
+  border-radius: 10px;
+  color: white;
+  font-size: 18px;
+  margin-left: 20px;
+  margin-top: 15px;
+}
+
+.post-set{
+  margin: 20px;
+  border: 2px solid greenyellow;
+  padding: 10px;
+  border-radius: 20px;
+  background-color: aliceblue;
+}
+
+.post-set h2{
+  margin-bottom: 20px;
+}
+
+.post-set p{
+  margin-bottom: 10px;
+}
+
+.textarea{
+  margin-top: 20px;
+  border: 2px solid greenyellow;
+  padding: 10px;
+  border-radius: 20px;
+  background-color: white;
+}
+
+.remove{
+  border: 2px solid greenyellow;
+  padding: 10px;
+  border-radius: 20px;
+  background-color: white;
+  cursor: pointer;
+}
+
+.remove a{
+  text-decoration: none;
+  color: black;
+}
+
+/* content */
+.content-set img{
+  height: 300px;
+
+}
+
+.content-set div {
+  margin-top: 20px;
+  border: 2px solid greenyellow;
+  padding: 10px;
+  border-radius: 20px;
+  background-color: white;
+ 
+}
+
+.content-set div p{
+  padding: 10px;
+ 
 }
